--- a/.github/workflows/docker-build-pipeline.yml
+++ b/.github/workflows/docker-build-pipeline.yml
@@ -33,11 +33,12 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ownerofglory/vector-study-case
+          flavor: |
+            latest=true
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
             type=sha
-            latest=true
 
 
       - name: Build and push Docker image
