--- a/.github/workflows/docker-build-pipeline.yml
+++ b/.github/workflows/docker-build-pipeline.yml
@@ -15,7 +15,21 @@ on:
       - master
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21.x'
+      - name: Install dependencies
+        run: go get .
+      - name: Test with the Go CLI
+        run: go test ./...
+
   push_to_registry:
+    needs: [test]
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
