--- a/.github/workflows/docker-build-pipeline.yml
+++ b/.github/workflows/docker-build-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           go-version: '1.21.x'
       - name: Install dependencies
-        run: go get .
+        run: go mod download
       - name: Test with the Go CLI
         run: go test ./...
 
